fix: block children wrap

--- a/blocks/x-plugin/src/heading/styles/index.scss
+++ b/blocks/x-plugin/src/heading/styles/index.scss
@@ -1,41 +1,41 @@
 .block-kit-x-heading-h1 {
   font-size: 26px;
   font-weight: bold;
-  margin-bottom: 10px;
-  margin-top: 18px;
+  margin-bottom: 6px;
+  margin-top: 12px;
 }
 
 .block-kit-x-heading-h2 {
   font-size: 22px;
   font-weight: bold;
-  margin-bottom: 8px;
-  margin-top: 16px;
+  margin-bottom: 4px;
+  margin-top: 10px;
 }
 
 .block-kit-x-heading-h3 {
   font-size: 20px;
   font-weight: bold;
-  margin-bottom: 8px;
-  margin-top: 14px;
+  margin-bottom: 4px;
+  margin-top: 10px;
 }
 
 .block-kit-x-heading-h4 {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: bold;
-  margin-bottom: 8px;
-  margin-top: 12px;
+  margin-bottom: 4px;
+  margin-top: 10px;
 }
 
 .block-kit-x-heading-h5 {
   font-size: 16px;
   font-weight: bold;
-  margin-bottom: 8px;
-  margin-top: 10px;
+  margin-bottom: 4px;
+  margin-top: 6px;
 }
 
 .block-kit-x-heading-h6 {
   font-size: 16px;
   font-weight: bold;
-  margin-bottom: 8px;
-  margin-top: 8px;
+  margin-bottom: 4px;
+  margin-top: 4px;
 }
