--- a/blocks/x-react/src/styles/editable.scss
+++ b/blocks/x-react/src/styles/editable.scss
@@ -8,6 +8,6 @@ div[data-block][data-placeholder]::before {
   position: absolute;
 }
 
-div:not(div[data-block-type='ROOT']) > .block-kit-x-children {
+.block-kit-x-children {
   margin-left: 10px;
 }
