--- a/examples/website/src/blocks/styles/index.scss
+++ b/examples/website/src/blocks/styles/index.scss
@@ -47,6 +47,6 @@ body[arco-theme='dark'] {
 
   div[data-text-block],
   div.block-kit-editable > div[data-placeholder] {
-    margin: 3px 0;
+    margin: 6px 0;
   }
 }
